# Go

./: .gitignore  Board.h  CMakeLists.txt  CMakePresets.json  Go.cc  GoBoard2D.cc  Piece.cc  Player.h  README.md  State.cc  State.h  Stone.h  main.cpp
Go/include/: Board.h  Group.h  Piece.h  Player.h  Stone.h
Go/src/: Go.cc  GoBoard.cc  GoUI.cc  IllegalMoveException.cc  State.cc  Stone.cc
include/: Go.h  GoBoard.h  GoBoard2D.h  GoUI.h  IllegalMoveException.h  State.h
src/: Go.h  GoBoard.cc  GoBoard.h  GoBoard2D.cc  GoBoard2D.h  GoUI.cc  Group.cc  Group.h  IllegalMoveException.h  Piece.h  Player.cc  Stone.cc
